Fix sidebar overflow and logic for bringing active heading into view

--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -18,7 +18,7 @@
     top: calc(var(--pageHeader_height, 0) + 1.5rem);
     bottom: 0;
     min-height: 50vh;
-    max-height: calc(100vh - var(--pageHeader_height));
+    max-height: calc(95vh - var(--pageHeader_height));
     max-width: 250px;
     min-width: 250px;
     // Margin-top matches the height of the heading plus its padding — so that
@@ -41,7 +41,6 @@
 .sidebar__contents,
 .sidebar__toc {
   padding: 0 0 1.5rem;
-  max-height: 100%;
 
   ul li {
     margin: 0;
